--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                             </a>
                                                   </li>
                                           <li class="">
-                                                        <a href="https://wpriverthemes.com/bronx/work/">
+                                                        <a href="#">
                                  <span class="count">(2)</span>
                                 <span>Work</span>
                                 <span>Work</span>
@@ -216,16 +216,16 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
                     <ul class="social-links">
                         <li>
-                            <a href="https://instagram.com" target="_blank">FACEBOOK 
+                            <a href="https://www.facebook.com/tungba1234/" target="_blank">FACEBOOK 
                                 <i class="las la-arrow-up"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://dribbble.com" target="_blank">BEHANCE <i class="las la-arrow-up"></i>
+                            <a href="https://www.behance.net/tngnguyn74" target="_blank">BEHANCE <i class="las la-arrow-up"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com" target="_blank">YOUTUBE <i class="las la-arrow-up"></i>
+                            <a href="https://www.youtube.com/@tung-g1u" target="_blank">YOUTUBE <i class="las la-arrow-up"></i>
                             </a>
                         </li>
                     </ul>
@@ -325,7 +325,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 
                 <!-- Featured Cart -->
         <div class="featured-card">
-            <a class="link-overlay" href="https://zocytus.github.io/web-design/"></a>
+            <a class="link-overlay" href="https://www.youtube.com/@tung-g1u"></a>
                         <div class="img-box">
                 <img decoding="async" src="images/work-2.gif" alt="">
             </div>
