--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                             </a>
                                                   </li> -->
                                           <li class="">
-                                                        <a href="https://wpriverthemes.com/bronx/contact/">
+                                                        <a href="https://zocytus.github.io/contact/">
                                  <span class="count">(5)</span>
                                 <span>Contact</span>
                                 <span>Contact</span>
@@ -253,7 +253,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
                             <div class="header-middle">
                                 <div class="humberg-menu">
-                                                                        <a href="https://wpriverthemes.com/bronx/contact/">
+                                                                        <a href="https://zocytus.github.io/contact/">
                                         <i class="iconoir-send-mail"></i>
                                     </a>
                                                                     </div>
