--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 </div>
 
                                 <div class="right text-right">
-                                        <a href="https://wpriverthemes.com/bronx/contact/" class="theme-btn">Schedule a call</a>
+                                        <a href="https://zocytus.github.io/contact/" class="theme-btn">Schedule a call</a>
                                     </div>
                             </div>
             <div class="popup-menu">
