--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </style>
 
     <!-- ===== Stylesheet ===== -->
-        <title>Work-Dark – Bronx – WordPress Theme</title>
+        <title>Tung Nguyen - Work</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//maxst.icons8.com">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -152,7 +152,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         <div class="popup-menu-wrap">
             <div class="popup-menu-header">
                 <div class="local-temperature">
-                                        <a href="https://wpriverthemes.com/bronx/"><span>Local/</span></a>
+                                        <a href="https://zocytus.github.io/mian/"><span>Local/</span></a>
                     
                                         <span id="coordinates"></span>
                                     </div>
@@ -173,7 +173,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 <nav class="menu-lists">
                     <ul>
                                           <li class="">
-                                                        <a href="https://wpriverthemes.com/bronx/">
+                                                        <a href="https://zocytus.github.io/mian/">
                                  <span class="count">(1)</span>
                                 <span>Home</span>
                                 <span>Home</span>
@@ -246,7 +246,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
                             <!-- ===== Local Time ===== -->
                             <div class="header-local-time-box">
-                                                                <a href="https://wpriverthemes.com/bronx/"><span>Local/</span></a>
+                                                                <a href="https://zocytus.github.io/mian/"><span>Local/</span></a>
                                 
                                                                 <span id="realtime">00:00</span>
                                                             </div>
