--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         
                 <!-- Featured Cart -->
         <div class="featured-card">
-            <a class="link-overlay" href="https://zocytus.github.io/web-design/"></a>
+            <a class="link-overlay" href="https://zocytus.github.io/design-work/"></a>
                         <div class="img-box">
                 <img decoding="async" src="images/work-1.gif" alt="">
             </div>
@@ -342,7 +342,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 
                 <!-- Featured Cart -->
         <div class="featured-card">
-            <a class="link-overlay" href="https://zocytus.github.io/tungba-webgallery/"></a>
+            <a class="link-overlay" href="https://zocytus.github.io/design-work/"></a>
                         <div class="img-box">
                 <img decoding="async" src="images/work-3.gif" alt="">
             </div>
