--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 
                 <!-- Featured Cart -->
         <div class="featured-card">
-            <a class="link-overlay" href="https://zocytus.github.io/design-work/"></a>
+            <a class="link-overlay" href="https://zocytus.github.io/web-album/"></a>
                         <div class="img-box">
                 <img decoding="async" src="images/work-3.gif" alt="">
             </div>
@@ -359,7 +359,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 
                 <!-- Featured Cart -->
         <div class="featured-card">
-            <a class="link-overlay" href="https://zocytus.github.io/web-album/"></a>
+            <a class="link-overlay" href="https://zocytus.github.io/3d-website/"></a>
                         <div class="img-box">
                 <img decoding="async" src="images/work-4.gif" alt="">
             </div>
